--- a/index.html
+++ b/index.html
@@ -1,2 +1,27 @@
+<!--<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+<center>
+  <b>
+    <font size="5" color="green" face="arial">Hi. This is Sivaramakrishnan Rajendar from KPRIET, Coimbatore.</font>
+  </b>
+</center>
+<marquee width="85%" direction="right" height="100px">
+  <h1>
+    This is my first sample web page
+  </h1>
+</marquee>
+<br />
+<center>
+  <img src="https://cdn.glitch.com/f1b5dcbf-9db2-4c3e-b57f-748d8787304e%2FSiva-KPR.jpg?v=1630558982620"
+    alt="W3Schools.com" width="150" height="150" />
+</center>
+<i><b>
+    <font size="4" color="black" face="arial">About Me:</font>
+  </b><br /></i>
+<p>
+  I'm a self-motivated and enthusiastic professor who loves teaching. I like to
+  find the best in every student and love to stay connected with them. Being a
+  computer science professor I enjoy solving problems, writing code in an
+  elegant way that takes me and the students to progress.
+</p>-->
 <canvas id="myCanvas" width="500px" height="500px" style="border: 2px solid blue;"></canvas>
 <script type="text/javascript" src="javascr.js"> </script>
