--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
 <center>
   <b>
     <font size="5" color="green" face="arial">Hi. This is Sivaramakrishnan Rajendar from KPRIET, Coimbatore.</font>
@@ -22,6 +22,6 @@
   find the best in every student and love to stay connected with them. Being a
   computer science professor I enjoy solving problems, writing code in an
   elegant way that takes me and the students to progress.
-</p>-->
+</p>
 <canvas id="myCanvas" width="500px" height="500px" style="border: 2px solid blue;"></canvas>
 <script type="text/javascript" src="javascr.js"> </script>
