--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@
   elegant way that takes me and the students to progress.
 </p>
 <br>
-<a href="./second.html"> Martial Arts Simulation </a>
+<a href="./second.html"> Martial Arts Simulation Link </a>
